<resources>
    <string name="carelevo">Carelevo</string>
    <string name="carelevo_shortname">CL</string>
    <string name="carelevo_description">Pump integration for carelevo</string>
    <string name="common_btn_ok">OK</string>
    <string name="carelevo_bluetooth_state_key">Bluetooth status</string>
    <string name="carelevo_patch_state_key">Connection</string>
    <string name="carelevo_serial_number_key">Serial No.</string>
    <string name="carelevo_firmware_version_key">Firmware</string>
    <string name="carelevo_lot_number_key">Lot No.</string>
    <string name="carelevo_boot_date_time_key">Activation Time</string>
    <string name="carelevo_expiration_key">Expiration</string>
    <string name="carelevo_infusion_status_key">Infusion</string>
    <string name="carelevo_basal_rate_key">Basal Rate</string>
    <string name="carelevo_temp_basal_rate_key">Temp basal rate</string>
    <string name="carelevo_insulin_remain_key">Insulin Remaining</string>
    <string name="carelevo_total_delivered_basal_key">Basal Delivered</string>
    <string name="carelevo_total_delivered_bolus_key">Bolus Delivered</string>
    <string name="carelevo_running_remain_time">Patch Time Remaining</string>
    <string name="carelevo_bolus_status_key">Bolus</string>
    <string name="carelevo_imme_bolus_rate_key">Immediate Bolus</string>
    <string name="carelevo_extend_bolus_rate_key">Extended Bolus</string>
    <string name="carelevo_bolus_time_range">Delivery Duration</string>
    <string name="carelevo_total_insulin_key">Total insulin delivered</string>
    <string name="common_label_unit_value_duration_hour_and_minute">%d hrs %d min</string>
    <string name="common_label_unit_value_date_format_year_month_date_day">(E), MMMM dd, yyyy</string>
    <string name="common_label_unit_value_duration_day_hour">%d days %d hrs</string>
    <string name="common_label_unit_value_minute">%d min</string>
    <string name="common_label_unit_value_duration_hour">%d hrs</string>
    <string name="common_label_unit_dose">U</string>
    <string name="common_label_unit_value_dose">%sU</string>
    <string name="common_label_unit_value_dose_with_space">%s U</string>
    <string name="common_label_unit_dose_per_speed">U/hr</string>
    <string name="common_label_unit_value_dose_per_speed">%sU/hr</string>
    <string name="common_label_unit_value_dose_per_speed_with_space">%s U/hr</string>
    <string name="carelevo_pump_resume_title">Would you like to resume infusion?</string>
    <string name="carelevo_pump_resume_description">Infusion will resume when you press Confirm.</string>
    <string name="carelevo_pump_stop_duration_title">Please set the infusion pause time.</string>
    <string name="carelevo_pump_stop_duration_label_30_min">30 minutes</string>
    <string name="carelevo_pump_stop_duration_label_1_hour">1 hour</string>
    <string name="carelevo_pump_stop_duration_label_1_hour_30_min">1 hour 30 minutes</string>
    <string name="carelevo_pump_stop_duration_label_2_hour">2 hours</string>
    <string name="carelevo_pump_stop_duration_label_2_hour_30_min">2 hours 30 minutes</string>
    <string name="carelevo_pump_stop_duration_label_3_hour">3 hours</string>
    <string name="carelevo_pump_stop_duration_label_3_hour_30_min">3 hours 30 minutes</string>
    <string name="carelevo_pump_stop_duration_label_4_hour">4 hours</string>
    <string name="common_unit_step_format">%1$d/%2$d</string>
    <string name="common_unit_value_day_hour_min">%1$d days %2$02d:%3$02d</string>
    <string name="common_unit_remain_min_sec">%d min %02d sec remaining</string>
    <string name="carelevo_btn_insulin_guide">Insulin Guide</string>
    <string name="carelevo_btn_patch_expiration">Deactivate Patch</string>
    <string name="carelevo_btn_input_insulin_amount">Fill Amount</string>
    <string name="carelevo_btn_input_search_patch">Search Patch</string>
    <string name="carelevo_btn_retry">try again.</string>
    <string name="carelevo_btn_next">Next</string>
    <string name="carelevo_btn_safety_check">Safety Check</string>
    <string name="carelevo_btn_ready_complete">Ready</string>
    <string name="carelevo_btn_close">Close</string>
    <string name="carelevo_btn_cancel">Cancel</string>
    <string name="carelevo_btn_confirm">Confirm</string>
    <string name="carelevo_btn_research">Rescan</string>
    <string name="carelevo_btn_needle_insert_check">Check Insertion</string>
    <string name="carelevo_state_none_value">No Active Patch</string>
    <string name="carelevo_state_disconnected_value">Disconnected</string>
    <string name="carelevo_state_connected_value">Connected</string>
    <string name="carelevo_overview_connect_btn_label">Connect Patch</string>
    <string name="carelevo_overview_communication_btn_label">Communication Error</string>
    <string name="carelevo_overview_pump_stop_btn_label">Pause Insulin</string>
    <string name="carelevo_overview_pump_resume_btn_label">Start Insulin</string>
    <string name="carelevo_overview_pump_discard_btn_label">Patch Expired</string>
    <string name="patch_prepare_dialog_title_insulin_amount">Select filled amount.</string>
    <string name="patch_prepare_dialog_msg_insulin_range">Range : 50 ~ 300 U</string>
    <string name="carelevo_insulin_refill_guide_title">Insulin Refill Guide</string>
    <string name="carelevo_insulin_refill_step1">1. Insert the syringe into the patch’s insulin injection port (①) and pull back the plunger to remove any air.</string>
    <string name="carelevo_insulin_refill_step2">2. Fill the syringe with the amount of insulin needed for the patch’s usage period.</string>
    <string name="carelevo_insulin_refill_step3">3. After filling the syringe, insert the needle into the patch’s insulin injection port (①) again and pull back the plunger to remove any remaining air.</string>
    <string name="carelevo_insulin_refill_step4">4. After removing air, check the top marking of the plunger to read the exact insulin volume in the syringe and record it.</string>
    <string name="carelevo_insulin_refill_step5">5. Insert the syringe into the patch’s injection port and slowly push the plunger to inject insulin into the patch.</string>
    <string name="carelevo_connect_prepare_title">Patch Started</string>
    <string name="carelevo_connect_patch_title">Connect Patch</string>
    <string name="carelevo_connect_safety_check_title">Safety Check</string>
    <string name="carelevo_connect_patch_attach_title">Apply Patch</string>
    <string name="carelevo_connect_needle_check_title">Insert Needle</string>
    <string name="key_carelevo_low_reservoir_reminders" translatable="false">carelevo_low_reservoir_reminders</string>
    <string name="carelevo_low_reservoir_reminders_title">Low Insulin Notification</string>
    <string name="carelevo_patch_buzzer_alarm_title">Patch Info Alarm</string>
    <string name="carelevo_patch_expiration_reminders_title">Patch Usage Reminder</string>
    <string name="carelevo_low_reservoir_reminders_title_value">Low Insulin Notification Setting</string>
    <string name="carelevo_patch_expiration_reminders_title_value">Patch Usage Notification Setting</string>
    <string name="carelevo_patch_expiration_reminders_message">A reminder sounds when patch usage time exceeds the set time.</string>
    <string name="carelevo_preferences_category_confirmation_beeps">Confirmation Beeps</string>
    <string name="carelevo_title_fill_insulin">Fill Patch with Insulin</string>
    <string name="carelevo_notice_fill_insulin_amount">Fill the patch with insulin (50–300 U), considering the usage period (up to 168 hours). Tap the [Fill Amount] for insulin filled.</string>
    <string name="carelevo_patch_step_1">STEP 1.</string>
    <string name="carelevo_patch_step_2">STEP 2.</string>
    <string name="carelevo_patch_step_3">STEP 3.</string>
    <string name="carelevo_patch_connect_step_1_title">Remove Needle Cap</string>
    <string name="carelevo_patch_connect_step_1_desc">Take out patch from blister and remove needle cap.</string>
    <string name="carelevo_patch_connect_step_2_title">Power On and Connect</string>
    <string name="carelevo_patch_connect_step_2_desc">Press the power button for more than 1 second. After the beep, Tap the [Search Patch] button below.</string>
    <string name="carelevo_patch_safety_check_start_title">Safety Check</string>
    <string name="carelevo_patch_safety_check_end_title">Safety Check Completed</string>
    <string name="carelevo_patch_safety_check_start_desc">The patch has been connected successfully.\nPlease press the [Safety Check] button.</string>
    <string name="carelevo_patch_safety_check_progress_desc">Safety check in progress.</string>
    <string name="carelevo_patch_safety_check_end_desc">Safety check completed.\nPlease press the Next button.</string>
    <string name="carelevo_patch_safety_check_desc_warning">Please check whether an insulin droplet has formed at the needle tip.</string>
    <string name="carelevo_patch_safety_check_retry_desc">If no insulin droplet is visible, please press the [Retry] button.</string>
    <string name="carelevo_patch_attach_step1_title">Disinfect Patch Site</string>
    <string name="carelevo_patch_attach_step1_desc">Clean thoroughly with an alcohol swab.</string>
    <string name="carelevo_patch_attach_step2_title">Remove Backing Tape</string>
    <string name="carelevo_patch_attach_step2_desc">Take out patch from blister and remove needle cap.</string>
    <string name="carelevo_patch_attach_step3_title">Apply Patch</string>
    <string name="carelevo_patch_attach_step3_desc">Attach the patch to your skin with the marked dot facing upward.</string>
    <string name="carelevo_patch_attach_step4_desc">After attaching the patch, press the Ready button.</string>
    <string name="carelevo_patch_needle_insertion_step1_title">Remove Safety Cap</string>
    <string name="carelevo_patch_needle_insertion_step1_desc">Turn the safety cap in the direction of the arrow and remove.</string>
    <string name="carelevo_patch_needle_insertion_step2_title">Insert Needle</string>
    <string name="carelevo_patch_needle_insertion_step2_desc">Press the applicator push button all the way down. A beep will sound upon successful insertion.</string>
    <string name="carelevo_patch_needle_insertion_desc_warning">Press and hold for 10 seconds.</string>
    <string name="carelevo_dialog_patch_needle_check_title">Needle not inserted?</string>
    <string name="carelevo_dialog_patch_needle_check_desc">Press the applicator push button all the way down.\nYou will hear a beep sound upon successful insertion.\nTap the <b>[Check Insertion]</b> button below.</string>
    <string name="carelevo_dialog_patch_needle_check_retry_desc">Press the applicator push button all the way down.\nYou will hear a beep sound upon successful insertion.\nTap the <b>[Retry]</b> button below.</string>
    <string name="carelevo_dialog_patch_needle_retry_count">%d retry attempt(s) left for needle insertion.</string>
    <string name="carelevo_dialog_patch_discard_message_title">Deactivate patch and start new patch?</string>
    <string name="carelevo_dialog_patch_discard_message_desc">Pressing the [OK] button will stop insulin.</string>
    <string name="carelevo_dialog_patch_connect_message_title">If the patch detected below is correct, please tap the Confirm button.</string>
    <string name="carelevo_dialog_patch_connect_needle_injected">Needle insertion complete and applicator removal</string>
    <string name="carelevo_dialog_connect_detached">Removal complete</string>
    <string name="carelevo_dialog_connect_detach_applicator_guide">
        Press the grips on both sides of the applicator to detach it from the patch,\n
        and then press the <b>[Removal Complete]</b> button. Insulin delivery will begin.
    </string>
    <string name="carelevo_toast_patch_connecting">Patch is connecting…</string>
</resources>