<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carelevo_patch_step_1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_step1_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_step1_title"
            tools:text="STEP 1." />

        <TextView
            android:id="@+id/tv_step1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/carelevo_patch_connect_step_1_title"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_step_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_step1_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/carelevo_patch_connect_step_1_desc"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step1_title" />

        <TextView
            android:id="@+id/tv_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carelevo_patch_step_2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_step2_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_step2_title"
            tools:text="STEP 2." />

        <TextView
            android:id="@+id/tv_step2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/carelevo_patch_connect_step_2_title"
            android:textSize="18sp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_step_2"
            app:layout_constraintTop_toBottomOf="@id/tv_step1_desc" />

        <TextView
            android:id="@+id/tv_step2_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/carelevo_patch_connect_step_2_desc"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step2_title" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_discard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/carelevo_btn_patch_expiration"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/carelevo_btn_input_search_patch"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_discard"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>